syntax = "proto3";

option go_package = "protogo";

service Recommendation {
    rpc Fetch(RecommendRequest) returns (RecommendResponse);
    rpc UpdateUserPreference(UpdateRequest) returns (UpdateResponse);
}

message RecommendRequest {
    string user_email = 1;
}

message Movie {
    int64 id = 1;
    string title = 2;
    string imdb_id = 3;
    double predicted_rating = 4;
}

message RecommendResponse {
    repeated Movie movies = 1;
}

message UpdateRequest {
    string user_email = 1;
}

message UpdateResponse {
    bool accepted = 1;
}

